# bgooglemapsmaker

./: .gitignore  CMakeLists.txt  README.md  bgooglemapsmaker.cpp  bgooglemapsmaker.h  main.cpp
cmake/: FindGraphicsMagick++.cmake
template/: leaflet.html
